--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -1,6 +1,60 @@
-button{
-  width: 5vmin;
-  height: auto;
-  margin: 4px 5px;
-  font-size: 20px;
+:root{
+  --logo: rgb(80, 112, 252);
+}
+.header{
+  position: fixed;
+  left:0;
+  right:0;
+  top:0;
+  height: 8vmin;
+  background: white;
+  box-shadow: 1px 0 10px lightgrey;
+  z-index: 99;
+}
+.header ul{
+display: flex;
+justify-content: space-between;
+margin: auto 5vmin;
+align-items: center;
+height: 100%;
+padding: 0;
+color: darkgrey;
+background: white;
+}
+.header .link{
+  text-decoration: none;
+  background: none;
+  padding: 1vmin;
+  margin: 0 1vmin;
+  text-align: center;
+  color: darkgrey;
+  font-size: 3vmin;
+  cursor: pointer;
+  -webkit-transition: all 300ms linear; 
+  -moz-transition: all 300ms linear; 
+  transition: all 300ms linear; 
+}
+header .link span{
+  position: absolute;
+  -moz-transform: translateY(8px) translateX(-3px);
+  -webkit-transform: translateY(8px) translateX(-3px);
+  transform: translateY(8px) translateX(-3px);
+  padding: 1px 3px;
+  border-radius: 50%;
+  font-size: 2vmin;
+  background:lightgrey;
+  color: white;
+}
+.header .link:hover{
+  color:rgb(80, 84, 94);
+}
+.header section:nth-child(2) a{
+  font-size: 5vmin;
+  text-shadow: 1px 1px 1px lightgrey;
+}
+.header section:nth-child(2) a:hover{
+  color:var(--logo);
+}
+.header section:nth-child(3) .link:first-child{
+  margin-right: 3vmin;
 }
