finished styling home page

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
-
-.all main{
-  margin: 8vmin 0;
+.all{
+  position: relative;
+  margin:0;
+  padding: 0;
+}
+.all .main{
+  margin: 8vmin 0 0 0;
+  padding: 0;
   width: 100%;
-  height: 92vh;
-  background: lightgrey;
+  height: 100vh;
 }
