--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -1,5 +1,5 @@
 :root{
-  --logo: rgb(80, 112, 252);
+  --logo: rgb(52, 86, 238);
 }
 .header{
   position: fixed;
@@ -20,6 +20,7 @@ height: 100%;
 padding: 0;
 color: darkgrey;
 background: white;
+text-align: center;
 }
 .header .link{
   text-decoration: none;
@@ -27,14 +28,14 @@ background: white;
   padding: 1vmin;
   margin: 0 1vmin;
   text-align: center;
-  color: rgb(99, 133, 185);
+  color: royalblue;
   font-size: 3vmin;
   cursor: pointer;
   -webkit-transition: all 300ms linear; 
   -moz-transition: all 300ms linear; 
   transition: all 300ms linear; 
 }
-header .link span{
+header .link small{
   position: absolute;
   -moz-transform: translateY(8px) translateX(-3px);
   -webkit-transform: translateY(8px) translateX(-3px);
@@ -46,13 +47,18 @@ header .link span{
   color: white;
 }
 .header .link:hover{
-  color:rgb(77, 91, 124)
+  color:rgb(140, 170, 236);
+}
+.header .section{
+  display: inline-block;
 }
 .header section:nth-child(2) a{
   font-size: 5vmin;
   text-shadow: 1px 1px 2px rgba(148, 155, 196, 0.3);
   font-weight: bold;
-  color: rgb(120, 179, 228);
+  color: var(--logo);
+  text-align:center;
+  font-weight: 400;
 }
 .header section:nth-child(2) a:hover{
   color:var(--logo);
