--- a/src/pages/detail/detail.css
+++ b/src/pages/detail/detail.css
@@ -11,12 +11,13 @@
   padding-bottom:0;
 }
 .slide-container{
- margin: 1.2vh 0 0 0;
+ margin: 0;
  text-align: left;
  width: 100%;
+ padding:0;
 }
 .slide-img{
-  width: 10vw;
+  width: 9.7vw;
   height: 10vmin;
   padding: 0;
   margin:1px;
@@ -39,8 +40,8 @@
 }
 .detail .main-img{
   width: 100%;
-  height: 60vh;
-  margin-top: 7vh;
+  height: 65vh;
+  margin-top: 3vh;
   margin-bottom: 0;
   background-size: cover;
   background-position: center;
@@ -95,6 +96,7 @@ font-size: 2.3vmin;
   border-radius: 10px;
   color: white;
   font-size: 2vh;
+  cursor: pointer;
 }
 .detail main .form p{
   text-align: center;
