--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,19 @@
   position: relative;
   margin:0;
   padding: 0;
+  overflow-x: hidden;
 }
 .all .main{
   margin: 8vmin 0 0 0;
   padding: 0;
   width: 100%;
-  height: 100vh;
 }
 .link{
   text-decoration: none;
+}
+.loading{
+  width:100%;
+  text-align: center;
+  position: relative;
+  margin-top: 45vh;
 }
