--- a/src/component/footer/footer.css
+++ b/src/component/footer/footer.css
@@ -1,6 +1,6 @@
 footer{
-  margin:0;
   padding:0;
+  
 }
 footer *{
   margin:0;
@@ -8,29 +8,35 @@ footer *{
 }
 footer .footer-image{
   width: 100vw;
-  height: 60vh;
   position: relative;
-  overflow: hidden;
 }
-footer .footer-image .img{
-  width: 100vw;
-  opacity: 0.03;
-  margin:0;
+.footer hr{
+  margin: 0 auto;
+  width: 30%;
+  opacity: 0.2;
 }
-footer .footer-image .img img{
-  width: 120vw;
+footer .footer-image::after{
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index:99;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: 5vh;
+  background-position-x: center;
+  background-image: url("https://cdn.pixabay.com/photo/2017/10/16/23/02/brooklyn-2858985_960_720.png");
+  opacity: 0.05;
+  z-index: -1;
 }
 footer .footer-holder{
-  position: absolute;
-  padding: 5vh 14vw;
-  bottom:5vh;
-  left:0;
-  right:0;
-  top: 40%;
+  padding: 5vmin 14vw;
 }
 footer .footer-holder p{
   font-weight: 100;
-  font-size: 3vmin;
+  font-size: 2vmin;
   text-align: center;
   color: grey;
 }
@@ -46,7 +52,7 @@ footer .social-media li{
   list-style: none;
 }
 footer .footer-holder .copyright{
-  font-size: 2vmin;
+  font-size: 1.2vmin;
   color: grey;
 }
 
